# replicator

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md
src/: bf.cpp  bf.hpp  main.cpp  soup.cpp  soup.hpp
tests/: test_bf.cpp  test_bf_compare.cpp  test_soup.cpp
